--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: pardus-lightdm-greeter-qr-ekilit
+Source: pardus-lightdm-greeter-qrkilit
 Section: misc
 Priority: optional
 Maintainer: bayramkarahan <bayramk@gmail.com>
@@ -6,9 +6,9 @@ Build-Depends: debhelper (>= 10), make
 Standards-Version: 4.3.0
 Homepage: https://www.pardus.org.tr
 
-Package: pardus-lightdm-greeter-qr-ekilit
+Package: pardus-lightdm-greeter-qrkilit
 Architecture: all
 Depends: pardus-lightdm-greeter,
          python3-qrcode
-Description: Pardus Greeter qr-ekilit plugin
- Pardus greeter qr-ekilit plugin
+Description: Pardus Greeter qrkilit plugin
+ Pardus greeter qrkilit plugin
